// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CRLF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<CRLF>
$test = 1;<CRLF>
<CRLF>
class Foo<CRLF>
{<CRLF>
    /**<CRLF>
     * Comment indented with tabs in file with utf-8[dos]<CRLF>
     */<CRLF>
    private $foo;<CRLF>
}<CRLF>

=====================================output=====================================
<?php<CRLF>
$test = 1;<CRLF>
<CRLF>
class Foo<CRLF>
{<CRLF>
    /**<CRLF>
     * Comment indented with tabs in file with utf-8[dos]<CRLF>
     */<CRLF>
    private $foo;<CRLF>
}<CRLF>

================================================================================
`;

exports[`CRLF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<CRLF>
$test = 1;<CRLF>
<CRLF>
class Foo<CRLF>
{<CRLF>
    /**<CRLF>
     * Comment indented with tabs in file with utf-8[dos]<CRLF>
     */<CRLF>
    private $foo;<CRLF>
}<CRLF>

=====================================output=====================================
<?php<CRLF>
$test = 1;<CRLF>
<CRLF>
class Foo<CRLF>
{<CRLF>
    /**<CRLF>
     * Comment indented with tabs in file with utf-8[dos]<CRLF>
     */<CRLF>
    private $foo;<CRLF>
}<CRLF>

================================================================================
`;

exports[`CRLF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<CRLF>
$test = 1;<CRLF>
<CRLF>
class Foo<CRLF>
{<CRLF>
    /**<CRLF>
     * Comment indented with tabs in file with utf-8[dos]<CRLF>
     */<CRLF>
    private $foo;<CRLF>
}<CRLF>

=====================================output=====================================
<?php<CRLF>
$test = 1;<CRLF>
<CRLF>
class Foo<CRLF>
{<CRLF>
    /**<CRLF>
     * Comment indented with tabs in file with utf-8[dos]<CRLF>
     */<CRLF>
    private $foo;<CRLF>
}<CRLF>

================================================================================
`;

exports[`LF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;<LF>

=====================================output=====================================
<?php<LF>
$test = 1;<LF>

================================================================================
`;

exports[`LF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;<LF>

=====================================output=====================================
<?php<LF>
$test = 1;<LF>

================================================================================
`;

exports[`LF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;<LF>

=====================================output=====================================
<?php<LF>
$test = 1;<LF>

================================================================================
`;

exports[`comment-block-CRLF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<CRLF>
<CRLF>
/**<CRLF>
 * See http://example.com<CRLF>
 *<CRLF>
 * Some example code<CRLF>
 * \`\`\`php<CRLF>
 * $hello = 'world'; // This is a comment in a comment<CRLF>
 * \`\`\`<CRLF>
 */<CRLF>
<CRLF>
$a = 1;<CRLF>

=====================================output=====================================
<?php<CRLF>
<CRLF>
/**<CRLF>
 * See http://example.com<CRLF>
 *<CRLF>
 * Some example code<CRLF>
 * \`\`\`php<CRLF>
 * $hello = 'world'; // This is a comment in a comment<CRLF>
 * \`\`\`<CRLF>
 */<CRLF>
<CRLF>
$a = 1;<CRLF>

================================================================================
`;

exports[`comment-block-CRLF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<CRLF>
<CRLF>
/**<CRLF>
 * See http://example.com<CRLF>
 *<CRLF>
 * Some example code<CRLF>
 * \`\`\`php<CRLF>
 * $hello = 'world'; // This is a comment in a comment<CRLF>
 * \`\`\`<CRLF>
 */<CRLF>
<CRLF>
$a = 1;<CRLF>

=====================================output=====================================
<?php<CRLF>
<CRLF>
/**<CRLF>
 * See http://example.com<CRLF>
 *<CRLF>
 * Some example code<CRLF>
 * \`\`\`php<CRLF>
 * $hello = 'world'; // This is a comment in a comment<CRLF>
 * \`\`\`<CRLF>
 */<CRLF>
<CRLF>
$a = 1;<CRLF>

================================================================================
`;

exports[`comment-block-CRLF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<CRLF>
<CRLF>
/**<CRLF>
 * See http://example.com<CRLF>
 *<CRLF>
 * Some example code<CRLF>
 * \`\`\`php<CRLF>
 * $hello = 'world'; // This is a comment in a comment<CRLF>
 * \`\`\`<CRLF>
 */<CRLF>
<CRLF>
$a = 1;<CRLF>

=====================================output=====================================
<?php<CRLF>
<CRLF>
/**<CRLF>
 * See http://example.com<CRLF>
 *<CRLF>
 * Some example code<CRLF>
 * \`\`\`php<CRLF>
 * $hello = 'world'; // This is a comment in a comment<CRLF>
 * \`\`\`<CRLF>
 */<CRLF>
<CRLF>
$a = 1;<CRLF>

================================================================================
`;

exports[`comment-block-LF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
<LF>
/**<LF>
 * See http://example.com<LF>
 *<LF>
 * Some example code<LF>
 * \`\`\`php<LF>
 * $hello = 'world'; // This is a comment in a comment<LF>
 * \`\`\`<LF>
 */<LF>
<LF>
$a = 1;<LF>

=====================================output=====================================
<?php<LF>
<LF>
/**<LF>
 * See http://example.com<LF>
 *<LF>
 * Some example code<LF>
 * \`\`\`php<LF>
 * $hello = 'world'; // This is a comment in a comment<LF>
 * \`\`\`<LF>
 */<LF>
<LF>
$a = 1;<LF>

================================================================================
`;

exports[`comment-block-LF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
<LF>
/**<LF>
 * See http://example.com<LF>
 *<LF>
 * Some example code<LF>
 * \`\`\`php<LF>
 * $hello = 'world'; // This is a comment in a comment<LF>
 * \`\`\`<LF>
 */<LF>
<LF>
$a = 1;<LF>

=====================================output=====================================
<?php<LF>
<LF>
/**<LF>
 * See http://example.com<LF>
 *<LF>
 * Some example code<LF>
 * \`\`\`php<LF>
 * $hello = 'world'; // This is a comment in a comment<LF>
 * \`\`\`<LF>
 */<LF>
<LF>
$a = 1;<LF>

================================================================================
`;

exports[`comment-block-LF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
<LF>
/**<LF>
 * See http://example.com<LF>
 *<LF>
 * Some example code<LF>
 * \`\`\`php<LF>
 * $hello = 'world'; // This is a comment in a comment<LF>
 * \`\`\`<LF>
 */<LF>
<LF>
$a = 1;<LF>

=====================================output=====================================
<?php<LF>
<LF>
/**<LF>
 * See http://example.com<LF>
 *<LF>
 * Some example code<LF>
 * \`\`\`php<LF>
 * $hello = 'world'; // This is a comment in a comment<LF>
 * \`\`\`<LF>
 */<LF>
<LF>
$a = 1;<LF>

================================================================================
`;

exports[`file-terminated-with-multiple-LF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;<LF>
<LF>
<LF>

=====================================output=====================================
<?php<LF>
$test = 1;<LF>
<LF>
<LF>

================================================================================
`;

exports[`file-terminated-with-multiple-LF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;<LF>
<LF>
<LF>

=====================================output=====================================
<?php<LF>
$test = 1;<LF>
<LF>
<LF>

================================================================================
`;

exports[`file-terminated-with-multiple-LF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;<LF>
<LF>
<LF>

=====================================output=====================================
<?php<LF>
$test = 1;<LF>
<LF>
<LF>

================================================================================
`;

exports[`file-terminated-without-line-ending.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;
=====================================output=====================================
<?php<LF>
$test = 1;
================================================================================
`;

exports[`file-terminated-without-line-ending.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;
=====================================output=====================================
<?php<LF>
$test = 1;
================================================================================
`;

exports[`file-terminated-without-line-ending.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<?php<LF>
$test = 1;
=====================================output=====================================
<?php<LF>
$test = 1;
================================================================================
`;

exports[`html-CRLF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><CRLF>
<html lang="de"><CRLF>
    <head><CRLF>
        <meta charset="utf-8" /><CRLF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><CRLF>
        <title>.</title><CRLF>
    </head><CRLF>
    <body><CRLF>
<CRLF>
        <?php echo 'foo!'; ?><CRLF>
<CRLF>
    </body><CRLF>
</html><CRLF>

=====================================output=====================================
<!DOCTYPE html><CRLF>
<html lang="de"><CRLF>
    <head><CRLF>
        <meta charset="utf-8" /><CRLF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><CRLF>
        <title>.</title><CRLF>
    </head><CRLF>
    <body><CRLF>
<CRLF>
        <?php echo 'foo!'; ?><CRLF>
<CRLF>
    </body><CRLF>
</html><CRLF>

================================================================================
`;

exports[`html-CRLF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><CRLF>
<html lang="de"><CRLF>
    <head><CRLF>
        <meta charset="utf-8" /><CRLF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><CRLF>
        <title>.</title><CRLF>
    </head><CRLF>
    <body><CRLF>
<CRLF>
        <?php echo 'foo!'; ?><CRLF>
<CRLF>
    </body><CRLF>
</html><CRLF>

=====================================output=====================================
<!DOCTYPE html><CRLF>
<html lang="de"><CRLF>
    <head><CRLF>
        <meta charset="utf-8" /><CRLF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><CRLF>
        <title>.</title><CRLF>
    </head><CRLF>
    <body><CRLF>
<CRLF>
        <?php echo 'foo!'; ?><CRLF>
<CRLF>
    </body><CRLF>
</html><CRLF>

================================================================================
`;

exports[`html-CRLF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><CRLF>
<html lang="de"><CRLF>
    <head><CRLF>
        <meta charset="utf-8" /><CRLF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><CRLF>
        <title>.</title><CRLF>
    </head><CRLF>
    <body><CRLF>
<CRLF>
        <?php echo 'foo!'; ?><CRLF>
<CRLF>
    </body><CRLF>
</html><CRLF>

=====================================output=====================================
<!DOCTYPE html><CRLF>
<html lang="de"><CRLF>
    <head><CRLF>
        <meta charset="utf-8" /><CRLF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><CRLF>
        <title>.</title><CRLF>
    </head><CRLF>
    <body><CRLF>
<CRLF>
        <?php echo 'foo!'; ?><CRLF>
<CRLF>
    </body><CRLF>
</html><CRLF>

================================================================================
`;

exports[`html-LF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><LF>
<html lang="de"><LF>
    <head><LF>
        <meta charset="utf-8" /><LF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><LF>
        <title>.</title><LF>
    </head><LF>
    <body><LF>
<LF>
        <?php echo 'foo!'; ?><LF>
<LF>
    </body><LF>
</html><LF>

=====================================output=====================================
<!DOCTYPE html><LF>
<html lang="de"><LF>
    <head><LF>
        <meta charset="utf-8" /><LF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><LF>
        <title>.</title><LF>
    </head><LF>
    <body><LF>
<LF>
        <?php echo 'foo!'; ?><LF>
<LF>
    </body><LF>
</html><LF>

================================================================================
`;

exports[`html-LF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><LF>
<html lang="de"><LF>
    <head><LF>
        <meta charset="utf-8" /><LF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><LF>
        <title>.</title><LF>
    </head><LF>
    <body><LF>
<LF>
        <?php echo 'foo!'; ?><LF>
<LF>
    </body><LF>
</html><LF>

=====================================output=====================================
<!DOCTYPE html><LF>
<html lang="de"><LF>
    <head><LF>
        <meta charset="utf-8" /><LF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><LF>
        <title>.</title><LF>
    </head><LF>
    <body><LF>
<LF>
        <?php echo 'foo!'; ?><LF>
<LF>
    </body><LF>
</html><LF>

================================================================================
`;

exports[`html-LF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><LF>
<html lang="de"><LF>
    <head><LF>
        <meta charset="utf-8" /><LF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><LF>
        <title>.</title><LF>
    </head><LF>
    <body><LF>
<LF>
        <?php echo 'foo!'; ?><LF>
<LF>
    </body><LF>
</html><LF>

=====================================output=====================================
<!DOCTYPE html><LF>
<html lang="de"><LF>
    <head><LF>
        <meta charset="utf-8" /><LF>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" /><LF>
        <title>.</title><LF>
    </head><LF>
    <body><LF>
<LF>
        <?php echo 'foo!'; ?><LF>
<LF>
    </body><LF>
</html><LF>

================================================================================
`;

exports[`mixed-CRLF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
Text<CRLF>
<?php echo 1; ?><CRLF>
<?php echo 2; ?><CRLF>
Test<CRLF>

=====================================output=====================================
Text<CRLF>
<?php echo 1; ?><CRLF>
<?php echo 2; ?><CRLF>
Test<CRLF>

================================================================================
`;

exports[`mixed-CRLF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
Text<CRLF>
<?php echo 1; ?><CRLF>
<?php echo 2; ?><CRLF>
Test<CRLF>

=====================================output=====================================
Text<CRLF>
<?php echo 1; ?><CRLF>
<?php echo 2; ?><CRLF>
Test<CRLF>

================================================================================
`;

exports[`mixed-CRLF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
Text<CRLF>
<?php echo 1; ?><CRLF>
<?php echo 2; ?><CRLF>
Test<CRLF>

=====================================output=====================================
Text<CRLF>
<?php echo 1; ?><CRLF>
<?php echo 2; ?><CRLF>
Test<CRLF>

================================================================================
`;

exports[`mixed-LF.php 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
Text<LF>
<?php echo 1; ?><LF>
<?php echo 2; ?><LF>
Test<LF>

=====================================output=====================================
Text<LF>
<?php echo 1; ?><LF>
<?php echo 2; ?><LF>
Test<LF>

================================================================================
`;

exports[`mixed-LF.php 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
Text<LF>
<?php echo 1; ?><LF>
<?php echo 2; ?><LF>
Test<LF>

=====================================output=====================================
Text<LF>
<?php echo 1; ?><LF>
<?php echo 2; ?><LF>
Test<LF>

================================================================================
`;

exports[`mixed-LF.php 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["php"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
Text<LF>
<?php echo 1; ?><LF>
<?php echo 2; ?><LF>
Test<LF>

=====================================output=====================================
Text<LF>
<?php echo 1; ?><LF>
<?php echo 2; ?><LF>
Test<LF>

================================================================================
`;
